@@ -1,1 +1,1 @@
-0.36.0
+0.36.1
