@@ -4,6 +4,10 @@
 
 - add dynamic color based on current song cover -- kaneryu on 2025-09-07
 
+## Bugfixes
+
+- Emit endReached signal immediately on song finish instead of using QTimer -- kaneryu on 2025-09-07
+
 
 
 # Version 0.35
